* Add initial pass at dynamic search suggestions * Big refactor of query param Alpine reactivity / search box / filter sidebar to use URL params as source of truth (lots of AI code here, heavily tested, but big caveat here) * Fix table based layouts for readability in admin pages * Add "info" to search box header that * Fix header styles / drop shadows * Fix stacking header sticky navs

--- a/static/assets/global.css
+++ b/static/assets/global.css
@@ -66,7 +66,7 @@ body:has(.bottom-drawer) {
 }
 
 .sticky-under-top-nav.subheader {
-  top: 8rem;
+  top: 8.4rem;
 }
 
 .sticky-under-top-nav + *:first-child {
@@ -309,7 +309,7 @@ input[type='number'] {
 .page-header {
   display: flex;
   justify-content: space-between;
-  align-items: center;
+  align-items: flex-start;
   margin-bottom: 1.5rem;
 }
 
